<resources>
    <string name="app_name">보카보까</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">검색</string>
    <string name="action_folder">folder</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_review">앱 리뷰하기</string>
    <string name="menu_share">앱 공유하기</string>
    <string name="menu_help">문의사항</string>
    <string name="menu_retore">구매 복구하기</string>
    <string name="menu_purchase">프리미엄 구매하기</string>


    <string name="home_second">Home Second</string>
    //앱 id
    <string name="admob_app_id">ca-app-pub-1642017903398482~7416803249</string>
    //단위 ID
    <string name="banner_ad_unit_id">수정해야함ca-app-pub-1642017903398482/3234380610</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="in_app_RSA">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEA6vHa2w+LF0sIlnwTLMkGnBSM7feDGLxk1Iq80Q6gBmfoONUH5qnPcNBW2riU++9dheujb2NMGfgpNIPRQ5Q3y6NMbO81LYdccplahaNIVLXOXaiXY3YW/lGpBAOX15yuEPLtpQhGIZ/monKJ7LUadJoUxgaI9KfTJrRUeLCdpo3vnalnbNQKhWecZum05gobDPpaz4t0yyypAe4VQKUyN/ZCKQ24nHC5MJl0IVKSPNkGVEqD4nns+hgxpVeI5KrZia2lJzah8Nc2CkvuMWbY5ElvLq8AlVvHSf+WTZCq5NcSI2H2LqufBaZdG1/iivt9kq4l+7sT16nuspH5BaXEbwIDAQAB</string>
    <string name="in_app_premium">upgradepro</string>

    <string name="purchase_noti">광고 제거\n- 나만의 단어장 무제한 출력</string>
    <string name="review_noti">보카보까 앱이 \n도움이 되셨나요?</string>
</resources>
