<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="구매">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_purchase"
                    android:icon="@drawable/ic_notifications_none_black_24dp"
                    android:title="@string/menu_purchase" />
                <item
                    android:id="@+id/nav_retore"
                    android:icon="@drawable/ic_settings_backup_restore_black_24dp"
                    android:title="@string/menu_retore" />

            </group>
        </menu>
    </item>
    <item android:title="지원">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_star_border_black_24dp"
                    android:title="@string/menu_review" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_share_black_24dp"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_help_outline_black_24dp"
                    android:title="@string/menu_help" />
            </group>
        </menu>
    </item>


</menu>
